ingress-rule/kiashop-ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiashop
  namespace: kiashop   # Assurez-vous que le service est dans le même namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx   # Remplace l'annotation dépréciée
  tls:
  - hosts:
    - kiashop.gainde2000.sn
    secretName: certificat-gainde
  rules:
  - host: kiashop.gainde2000.sn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiashop-service   # Nom du Service correct
            port:
              number: 80
